syntax = "proto3";

option go_package = "github.com/spaceshiperr/grpc-client-server/proto/generated";

package weather;

service WeatherService {
  rpc GetWeatherByCity (GetWeatherByCityRequest) returns (GetWeatherByCityResponse) {}
}

message GetWeatherByCityRequest {
  string city = 1;
}

message GetWeatherByCityResponse {
  float temp = 1;
  float feels_like = 2;
  string conditions = 3;
  string description = 4;
  uint32 pressure = 5;
  uint32 humidity = 6;
  float temp_min = 7;
  float temp_max = 8;
  uint32 wind_speed = 9;
}
